# loka

./: .gitignore  Makefile  README.md  go.mod  go.sum  loka.db  loka.db-shm  loka.db-wal
.github/workflows/: ci.yml  docs.yml  release.yml
api/lokav1/: control.pb.go  control_grpc.pb.go  types.pb.go  worker.pb.go  worker_grpc.pb.go
api/proto/: control.proto  supervisor.proto  types.proto  worker.proto
api/supervisorv1/: supervisor.pb.go  supervisor_grpc.pb.go
cmd/loka/: admin.go  alerts.go  checkpoint.go  connect.go  db.go  deploy.go  deploy_file.go  deploy_vm.go  deployments.go  deployments_test.go  dns.go  exec.go  image.go  instance.go  logs.go  main.go  metrics.go  portforward.go  portforward_test.go  provider.go  recipe.go  secret.go  service.go  session.go  session_test.go  setup.go  shell_test.go  space.go  task.go  token.go  use.go  volume.go  worker.go  worker_cache.go  worker_ops.go
cmd/loka-build/: initramfs.go
cmd/loka-supervisor/: main.go  overlay_linux.go  overlay_other.go
cmd/loka-vmagent/: main.go
cmd/loka-worker/: main.go
cmd/lokad/: main.go
cmd/lokavm/: assets.go  main.go  vm.go
configs/: controlplane-ha.yaml  controlplane.yaml  worker.yaml
docs/: .gitignore  index.html  installation.md  package-lock.json  package.json  quickstart.md
docs-site/: next.config.mjs  source.config.ts
docs-site/app/: layout.tsx
docs-site/content/: cli.mdx  meta.json  (+7 more)
scripts/: build-lima-image.sh  build-rootfs.sh  e2e-test.sh  install.sh  setup-lima-vm.sh
sdk/python/: README.md  pyproject.toml
sdk/python/loka/: __init__.py  client.py  types.py
(+370 files in other folders)
