[project]
name = "loka-sdk"
version = "0.3.4"
description = "LOKA Python SDK — Session-based microVM execution for AI agents"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]
license = {text = "Apache-2.0"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loka*"]
